syntax = "proto3";

option go_package = "github.com/anzuhq/sdk/provider-sdk-go/protobuf";

package provider_sdk;

// The greeting service definition.
service Provider {
  // Configures provider
  rpc Configure (ConfigureRequest) returns (ConfigureReply) {}

  // Create resource
  rpc Create (CreateRequest) returns (CreateReply) {}

  // Retrieve current resource state and output values
  rpc Read (ReadRequest) returns (ReadReply) {}

  // Update resource to desired state
  rpc Update (UpdateRequest) returns (UpdateReply) {}

  // Delete existing resource
  rpc Delete (DeleteRequest) returns (DeleteReply) {}

  rpc Ping (PingRequest) returns (PingReply) {}

  // Invoke provider function
  rpc InvokeFunction (InvokeFunctionRequest) returns (InvokeFunctionReply) {}
}

message ConfigureRequest {
  string environmentProviderId = 1;
  string configValues = 2;
}

message ConfigureReply {}

message CreateRequest {
  string environmentProviderId = 1;
  string inputValues = 2;
  string resourceInfo = 3;
  string deploymentInfo = 4;
}

message CreateReply {
  string state = 1;
  string outputValues = 2;
}

message ReadRequest {
  string environmentProviderId = 1;
  string state = 2;
  string resourceInfo = 3;
  string deploymentInfo = 4;
}

message ReadReply {
  string state = 1;
  string outputValues = 2;
}

message UpdateRequest {
  string environmentProviderId = 1;
  string state = 2;
  string inputValues = 3;
  string resourceInfo = 4;
  string deploymentInfo = 5;
}

message UpdateReply {
  string state = 1;
  string outputValues = 2;
}

message DeleteRequest {
  string environmentProviderId = 1;
  string state = 2;
  string resourceInfo = 3;
  string deploymentInfo = 4;
}

message DeleteReply {}

message PingRequest {}
message PingReply {}

message InvokeFunctionRequest {
  string environmentProviderId = 1;
  string functionName = 2;
  string argumentValues = 3;
}

message InvokeFunctionReply {
  string environmentProviderId = 1;
  string outputValue = 2;
}
